channel selection, availability and synced build corretly